--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -16,6 +16,7 @@ $accent: #ff6b00;
 $border-light: #e9edf3;
 $light-grey: #F2F2F2;
 $min-grey:#A5A5A5;
+$dark-grey:#646464;
 $bg-disabled:#dadada;
 $light-blue:#004E98;
 $pink:#E41669;
