page020+page021+page022
page022剩下列表調整

--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -34,6 +34,13 @@ $light-blue:#004E98;
 $pink:#E41669;
 $orange:#FF6721;
 
+
+
+.mt24{
+  margin-top: 2.4rem;
+}
+
+
 /* ===== bg ===== */
 .bg-light-pink {
   background-color: #FADFEA;
